* fix plugin structure

--- a/src/package.json
+++ b/src/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "pm-plugin-MySQLCLI",
-  "version": "1.0.2",
-  "description": "MySQL plugin for Productionmap",
+  "name": "kaholo-plugin-MySQLCLI",
+  "version": "1.2.0",
+  "description": "MySQL plugin for Kaholo",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Productionmap team (Yehonatan Bitton, Roy Talyosef)",
+  "author": "Kaholo Team",
   "license": "ISC",
   "dependencies": {
     "mysql": "^2.15.0"
