* update zip, dependencies and version

--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaholo-plugin-MySQLCLI",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "MySQL plugin for Kaholo",
   "main": "app.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "author": "Kaholo Team",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.15.0"
+    "mysql": "2.15.0",
+    "rimraf": "2.6.3"
   }
 }
