--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kaholo-plugin-MySQLCLI",
-  "version": "1.2.1",
-  "description": "MySQL plugin for Kaholo",
+  "name": "kaholo-plugin-mysqlcli",
+  "version": "1.3.0",
+  "description": "MySQL CLI plugin for Kaholo",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,6 @@
   "author": "Kaholo Team",
   "license": "ISC",
   "dependencies": {
-    "mysql": "2.15.0",
     "rimraf": "2.6.3"
   }
 }
