--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaholo-plugin-mysqlcli",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "MySQL CLI plugin for Kaholo",
   "main": "app.js",
   "scripts": {
@@ -9,6 +9,6 @@
   "author": "Kaholo Team",
   "license": "ISC",
   "dependencies": {
-    "rimraf": "2.6.3"
+    "connection-string": "^4.3.2"
   }
 }
