--- a/src/config.json
+++ b/src/config.json
@@ -4,12 +4,17 @@
   "imgUrl": "MySQL.png",
   "execProgram": "node",
   "main": "app.js",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "execute MySQL queries and scripts via cli.",
   "settings": [
     {
       "name": "conStr",
       "viewName": "Connection String",
+      "type": "string"
+    },
+    {
+      "name": "path",
+      "viewName": "MySql Shell Executables Path",
       "type": "string"
     }
   ],
