--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,7 @@
   "imgUrl": "MySQL.png",
   "execProgram": "node",
   "main": "app.js",
-  "version": "2.0.3",
+  "version": "2.0.5",
   "description": "execute MySQL queries and scripts via cli.",
   "settings": [
     {
@@ -52,9 +52,9 @@
       ]
     },
     {
-      "name":"dumpDataBase",
-      "viewName":"Dump a Database",
-      "params":[
+      "name": "dumpDataBase",
+      "viewName": "Dump a Database",
+      "params": [
         {
           "name": "conStr",
           "viewName": "Connection String",
@@ -78,9 +78,9 @@
       ]
     },
     {
-      "name":"copyDataBase",
-      "viewName":"Copy a Database",
-      "params":[
+      "name": "copyDataBase",
+      "viewName": "Copy a Database",
+      "params": [
         {
           "name": "conStr",
           "viewName": "Source Connection String",
@@ -108,5 +108,6 @@
         }
       ]
     }
-  ]
+  ],
+  "category": "DATABASE"
 }
