--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Kaholo Team",
   "license": "ISC",
   "dependencies": {
+    "@kaholo/plugin-library": "^2.1.2",
     "connection-string": "4.3.2"
   },
   "devDependencies": {
