Replace Copy Database method with Restore Database

--- a/config.json
+++ b/config.json
@@ -92,37 +92,25 @@
       ]
     },
     {
-      "name": "copyDatabase",
-      "viewName": "Copy a Database",
+      "name": "restoreDatabase",
+      "viewName": "Restore Database",
       "params": [
         {
-          "name": "destinationConnectionString",
-          "viewName": "Destination Connection String",
-          "type": "string"
-        },
-        {
-          "name": "destinationPassword",
-          "viewName": "Destination Password",
-          "type": "vault"
-        },
-        {
-          "name": "sourceDatabaseName",
-          "viewName": "Source Database Name",
+          "name": "databaseName",
+          "viewName": "Database Name",
           "type": "string",
           "required": true
         },
         {
-          "name": "newDatabaseName",
-          "viewName": "New Database Name",
+          "name": "dumpData",
+          "viewName": "Dump File Path",
+          "description": "Path to the file containing database dump in MySQL format",
           "type": "string",
+          "parserType": "filePath",
+          "parserOptions": {
+            "readFileContent": true
+          },
           "required": true
-        },
-        {
-          "name": "includeData",
-          "viewName": "Include Data",
-          "description": "Copy the database including the data from all tables",
-          "type": "boolean",
-          "default": true
         }
       ]
     }
