--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "imgUrl": "logo.png",
   "execProgram": "node",
   "main": "app.js",
-  "version": "2.0.6-kp-1123",
+  "version": "2.0.6",
   "description": "execute MySQL queries and scripts via cli.",
   "category": "DATABASE",
   "auth": {
