--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "imgUrl": "logo.png",
   "execProgram": "node",
   "main": "app.js",
-  "version": "2.0.6",
+  "version": "2.0.6-KP-1147",
   "description": "execute MySQL queries and scripts via cli.",
   "category": "DATABASE",
   "auth": {
@@ -57,9 +57,14 @@
         {
           "name": "sqlFilePath",
           "viewName": "File Path",
-          "description": "Path to the file containing valid SQL query",
+          "description": "Relative or absolute path to a file containing a MySQL query",
           "type": "string",
-          "placeholder": "./select.sql",
+          "parserType": "filePath",
+          "parserOptions": {
+            "throwIfDoesntExist": true,
+            "acceptedTypes": "file"
+          },
+          "placeholder": "queries/query_01.sql",
           "required": true
         }
       ]
