--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Kaholo Team",
   "license": "ISC",
   "dependencies": {
-    "@kaholo/plugin-library": "github:Kaholo/kaholo-plugin-library#0fb66b6a42ee16b76c2841e31d3d16ec8828ac8f",
-    "connection-string": "4.3.2"
+    "@kaholo/plugin-library": "github:Kaholo/kaholo-plugin-library#40a95d8751a5eb3c79a61b243917b137db9c5f4f",
+    "connection-string": "4.3.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
