--- a/config.json
+++ b/config.json
@@ -134,6 +134,37 @@
       ]
     },
     {
+      "name": "runMySQLCLICommand",
+      "viewName": "Run MySQL CLI Command",
+      "params": [
+        {
+          "name": "command",
+          "viewName": "Command",
+          "type": "string",
+          "description": "MySQL command to execute",
+          "required": true
+        },
+        {
+          "name": "environmentVariables",
+          "viewName": "Environment Variables",
+          "description": "Environment variables in key-value pairs format",
+          "type": "text",
+          "parserType": "keyValuePairs"
+        },
+        {
+          "name": "workingDirectory",
+          "viewName": "Working Directory",
+          "type": "string",
+          "description": "Path to use as a working directory, must exist on the agent",
+          "parserType": "filePath",
+          "parserOptions": {
+            "acceptedTypes": ["directory"],
+            "throwIfDoesntExist": true
+          }
+        }
+      ]
+    },
+    {
       "name": "listDatabases",
       "viewName": "List Databases",
       "params": []
