[KP-1146] Autocomplete for database (#24)

--- a/config.json
+++ b/config.json
@@ -76,8 +76,10 @@
         {
           "name": "databaseName",
           "viewName": "Database",
-          "type": "string",
-          "description": "Name of the database to dump",
+          "type": "autocomplete",
+          "autocompleteType": "function",
+          "functionName": "listDatabasesAuto",
+          "description": "Select the database to dump",
           "required": true
         },
         {
@@ -130,6 +132,11 @@
           "required": true
         }
       ]
+    },
+    {
+      "name": "listDatabases",
+      "viewName": "List Databases",
+      "params": []
     }
   ]
 }
