--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Kaholo Team",
   "license": "ISC",
   "dependencies": {
-    "@kaholo/plugin-library": "github:Kaholo/kaholo-plugin-library#fbec2881f8d4fd691c615e431e71d7a5cefbb979",
+    "@kaholo/plugin-library": "^2.2.1",
     "connection-string": "4.3.2"
   },
   "devDependencies": {
