--- a/config.json
+++ b/config.json
@@ -56,7 +56,7 @@
       "params": [
         {
           "name": "sqlFilePath",
-          "viewName": "File Path",
+          "viewName": "SQL File Path",
           "description": "Relative or absolute path to a file containing a MySQL query",
           "type": "string",
           "parserType": "filePath",
@@ -102,7 +102,7 @@
         },
         {
           "name": "overwrite",
-          "viewName": "Overwrite existing files",
+          "viewName": "Overwrite Existing Files",
           "type": "boolean",
           "description": "Overwrite file if one already exists at Dump File Path",
           "default": false
