--- a/config.json
+++ b/config.json
@@ -171,7 +171,7 @@
       ]
     },
     {
-      "name": "listDatabases",
+      "name": "listDatabasesJson",
       "viewName": "List Databases",
       "params": []
     }
