--- a/config.json
+++ b/config.json
@@ -40,6 +40,7 @@
     {
       "name": "executeQuery",
       "viewName": "Execute Query",
+      "allowEmptyResult": true,
       "params": [
         {
           "name": "query",
