--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
   "imgUrl": "logo.png",
   "execProgram": "node",
   "main": "app.js",
-  "version": "2.0.6",
+  "version": "2.0.6-KP-1203",
   "description": "execute MySQL queries and scripts via cli.",
   "category": "DATABASE",
   "auth": {
@@ -146,6 +146,7 @@
     {
       "name": "runMySQLCLICommand",
       "viewName": "Run MySQL CLI Command",
+      "allowEmptyResult": true,
       "params": [
         {
           "name": "command",
