--- a/config.json
+++ b/config.json
@@ -8,6 +8,12 @@
   "version": "3.0.0",
   "description": "execute MySQL queries and scripts via cli.",
   "category": "DATABASE",
+  "keywords": [
+    "mysql",
+    "sql",
+    "database",
+    "cli"
+  ],
   "auth": {
     "authId": "connectionStringMysqlAccount",
     "params": [
